--- a/.github/workflows/cp_dispatch.yml
+++ b/.github/workflows/cp_dispatch.yml
@@ -61,7 +61,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Use Node.js ${{ env.NODE_JS_VERSION }}
         uses: actions/setup-node@v4
         with:
@@ -88,7 +88,7 @@ jobs:
           if (-not [string]::IsNullOrEmpty($patchingVersion)) {
             if (Select-String -Path $filePath -Pattern $patchingVersion) {
               $compareVersion = "5.9.0"
-              
+          
               if ([version]$patchingVersion -ge [version]$compareVersion) {
                 $isValid = 'true'
                 Write-Output "Valid Version found."
@@ -109,14 +109,14 @@ jobs:
     outputs:
       library_extension:  ${{ steps.set_library_extension.outputs.library_extension }}
       arch_code:  ${{ steps.set_arch.outputs.arch_code }}
-      
+
     steps:
       - name: Set Library Extension (dll / so / dylib)
         id: set_library_extension
         shell: pwsh
         run: |
           $extension = 'not-selected'
-    
+          
           if ($env:OS_ARCH -eq 'Windows (x86_64)') {
             $extension = 'dll'
           } elseif ($env:OS_ARCH -eq 'Linux (x86_64)') {
@@ -134,7 +134,7 @@ jobs:
         shell: pwsh
         run: |
           $arch = 'not-selected'
-    
+          
           if ($env:OS_ARCH -eq 'Windows (x86_64)') {
             $arch = 'win32-x86_64'
           } elseif ($env:OS_ARCH -eq 'Linux (x86_64)') {
@@ -150,19 +150,19 @@ jobs:
           }
           
           "arch_code=$arch" | Out-File -Append -FilePath $env:GITHUB_OUTPUT
-   
+
   download-Yui-patch:
     runs-on: windows-latest
-    needs: 
+    needs:
       - validate-version
       - init_os_arch
 
     if: ${{ needs.validate-version.outputs.is_valid }} == 'true'
 
-    env: 
+    env:
       LIBRARY_EXTENSION: ${{ needs.init_os_arch.outputs.library_extension }}
       ARCH_CODE: ${{ needs.init_os_arch.outputs.arch_code }}
-      
+
     outputs:
       is-compatible-cont: ${{ steps.is-compatible-cont.outputs.is-compatible-cont }}
       Yui-fiddler-name: ${{ steps.Yui-fiddler-name.outputs.Yui-fiddler-name }}
@@ -173,7 +173,7 @@ jobs:
         run: |
           $patchingVersion = $env:VERSION_TO_PATCH
           $compareVersion = "5.17.0"
-   
+          
           if (-not [string]::IsNullOrEmpty($patchingVersion)) {
               if ([version]$patchingVersion -ge [version]$compareVersion) {
                   echo "IS_COMPATIBLE_CONT=true" | Out-File -Append -FilePath $env:GITHUB_ENV
@@ -183,16 +183,16 @@ jobs:
           } else {
               echo "IS_COMPATIBLE_CONT=false" | Out-File -Append -FilePath $env:GITHUB_ENV
           }
-        
+
         shell: pwsh
 
       - name: Set IS_COMPATIBLE_CONT as Output
         id: is-compatible-cont
         run: echo "is-compatible-cont=${{ env.IS_COMPATIBLE_CONT }}" | Out-File -Append -FilePath $env:GITHUB_OUTPUT
 
-      - name: Set Yui name 
+      - name: Set Yui name
         run: echo "YUI_NAME=yui" | Out-File -Append -FilePath $env:GITHUB_ENV
-        
+
       - name: Set Yui fiddler name (>= 5.17.0)
         if: env.IS_COMPATIBLE_CONT == 'true'
         run: |
@@ -218,7 +218,7 @@ jobs:
 
       - name: Set Yui Release
         run: echo "Yui_RELEASE=continuous" | Out-File -Append -FilePath $env:GITHUB_ENV
-        
+
       - name: Download Yui Patch
         run: |
           Write-Host "EXTENSION = $env:LIBRARY_EXTENSION"
@@ -226,7 +226,7 @@ jobs:
           try {
             # Build the download URLs
             $YuiFiddlerUrl = "https://github.com/project-yui/Yui-patch/releases/download/$env:Yui_RELEASE/$env:YUI_NAME-$env:Yui_FIDDLER_NAME_NO_EXTENSION-$env:ARCH_CODE-$env:Yui_RELEASE.$env:LIBRARY_EXTENSION"
-            
+          
             # Print the URLs to ensure they're correct
             Write-Host "Downloading files from $env:Yui_RELEASE"
             Write-Host "Yui Fiddler URL: $YuiFiddlerUrl"
@@ -239,7 +239,7 @@ jobs:
             exit 1
           }
         shell: pwsh
-      
+
       - name: Upload Yui folder as an artifact
         uses: actions/upload-artifact@v4
         with:
@@ -282,7 +282,7 @@ jobs:
   download-fiddler-everywhere-windows:
     if: ${{ github.event.inputs.os-and-arch == 'Windows (x86_64)' }}
     runs-on: windows-latest
-    needs: 
+    needs:
       - validate-version
 
     steps:
@@ -298,20 +298,20 @@ jobs:
             Write-Host "Download URL: $downloadUrl"
 
             Invoke-WebRequest -Uri $downloadUrl -OutFile "FiddlerEverywhereSetup.exe"
-            
+          
           } else {
             Write-Host "PATCHING_VERSION is empty or not set"
             exit 1
           }
         shell: pwsh
 
-      - name: Extract exe 
+      - name: Extract exe
         run: 7z x "FiddlerEverywhereSetup.exe" -ofe_extracted
 
       - name: Extract app
         run: 7z x "fe_extracted/`$PLUGINSDIR/app-64.7z" -ofe_app
         shell: pwsh
-        
+
       - name: Upload Fiddler Everywhere Extracted folder as an artifact
         uses: actions/upload-artifact@v4
         with:
@@ -322,7 +322,7 @@ jobs:
   download-fiddler-everywhere-linux:
     if: ${{ github.event.inputs.os-and-arch == 'Linux (x86_64)' }}
     runs-on: ubuntu-latest
-    needs: 
+    needs:
       - validate-version
 
     steps:
@@ -338,21 +338,21 @@ jobs:
             Write-Host "Download URL: $downloadUrl"
 
             Invoke-WebRequest -Uri $downloadUrl -OutFile "FiddlerEverywhereSetup.AppImage"
-            
+          
           } else {
             Write-Host "VERSION_TO_PATCH is empty or not set"
             exit 1
           }
         shell: pwsh
 
-      - name: Extract AppImage 
+      - name: Extract AppImage
         run: |
           chmod +x ./FiddlerEverywhereSetup.AppImage
           ./FiddlerEverywhereSetup.AppImage --appimage-extract
 
       - name: Rename squashfs-root to fe_app
         run: mv squashfs-root fe_app
-        
+
       - name: Upload Fiddler Everywhere Extracted folder as an artifact
         uses: actions/upload-artifact@v4
         with:
@@ -363,10 +363,10 @@ jobs:
   download-fiddler-everywhere-mac:
     if: ${{ github.event.inputs.os-and-arch == 'Mac (x86_64)' || github.event.inputs.os-and-arch == 'Mac (arm64)' || github.event.inputs.os-and-arch == 'Mac (arm64e)' }}
     runs-on: mac-latest
-    needs: 
+    needs:
       - validate-version
 
-    env: 
+    env:
       ARCH_CODE: ${{ github.event.inputs.arch_code }}
 
     steps:
@@ -392,14 +392,14 @@ jobs:
             Write-Host "Download URL: $downloadUrl"
 
             Invoke-WebRequest -Uri $downloadUrl -OutFile "FiddlerEverywhereSetup.dmg"
-            
+          
           } else {
             Write-Host "VERSION_TO_PATCH is empty or not set"
             exit 1
           }
         shell: pwsh
 
-      - name: Extract AppImage 
+      - name: Extract AppImage
         run: |
           hdiutil attach FiddlerEverywhere.dmg
           cp -R /Volumes/FiddlerEverywhere/* ./fe_app/
@@ -407,7 +407,7 @@ jobs:
       - name: List fe_app
         shell: pwsh
         run: Get-ChildItem -Recurse
-        
+
       - name: Upload Fiddler Everywhere Extracted folder as an artifact
         uses: actions/upload-artifact@v4
         with:
@@ -429,7 +429,7 @@ jobs:
 
     outputs:
       patched-fe-name: ${{ steps.rename-fe.outputs.patched-fe-name }}
-      
+
     steps:
       - name: Download Yukuhana-Patch
         uses: actions/download-artifact@v4
@@ -546,14 +546,14 @@ jobs:
             Write-Host "msojocs-patch Folder not found"
           }
 
-      - name: Rename FE 
+      - name: Rename FE
         id: rename-fe
         run: |
           if (Test-Path FE) {
             $newName = "Fiddler-Everywhere-V$env:VERSION_TO_PATCH-Patched"
-            
+          
             Rename-Item -Path "FE" -NewName $newName
-            
+          
             echo "patched-fe-name=$newName" | Out-File -Append -FilePath $env:GITHUB_OUTPUT
           } else {
             Write-Host "FE Folder not found!?"
@@ -565,3 +565,55 @@ jobs:
           name: "${{ steps.rename-fe.outputs.patched-fe-name }}"
           path: "${{ steps.rename-fe.outputs.patched-fe-name }}/"
           if-no-files-found: error
+create-tag:
+  runs-on: ubuntu-latest
+  needs:
+    - patch_fe
+    - validate-version  # Explicitly declare all dependencies
+  if: ${{ needs.validate-version.outputs.is_valid == 'true' && success() }}
+  
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        persist-credentials: true
+
+    - name: Configure Git
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        git config --global push.followTags true
+
+    - name: Verify version exists
+      run: |
+        if [ -z "${{ env.VERSION_TO_PATCH }}" ]; then
+          echo "VERSION_TO_PATCH is not set"
+          exit 1
+        fi
+
+    - name: Create and push tag
+      run: |
+        set -euo pipefail  # Enable strict mode
+        
+        TAG_NAME="patched-v${{ env.VERSION_TO_PATCH }}"
+        
+        # Check if tag exists locally or remotely
+        if git tag -l | grep -q "^$TAG_NAME$"; then
+          echo "::warning::Tag $TAG_NAME already exists locally. Deleting..."
+          git tag -d "$TAG_NAME" || true
+        fi
+        
+        # Check remote (this might fail if tag doesn't exist, so we continue anyway)
+        if git ls-remote --tags origin "$TAG_NAME" | grep -q "$TAG_NAME"; then
+          echo "::warning::Tag $TAG_NAME exists on remote. Deleting..."
+          git push origin --delete "$TAG_NAME" || true
+        fi
+        
+        # Create annotated tag
+        git tag -a "$TAG_NAME" -m "Patched version of Fiddler Everywhere ${{ env.VERSION_TO_PATCH }}"
+        
+        # Push only the tag (not branches)
+        git push origin "$TAG_NAME"
+        
+        echo "::notice::Successfully created and pushed tag: $TAG_NAME"
